<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	<LinearLayout
    	android:orientation="vertical"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="10dp"
		android:gravity="top">
		<ImageView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:src="@drawable/about_icon"
			android:contentDescription="@string/about_icon"
			android:adjustViewBounds="true"
			android:maxWidth="125dp"
			android:maxHeight="125dp"
			android:id="@+id/Logo"
			android:gravity="center_horizontal"/>
		<Button
			android:id="@+id/button_privacy"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="25dp"
			android:layout_marginLeft="20dp"
			android:layout_marginRight="20dp"
			android:text="@string/about_button_privacy"
			android:gravity="center"
			android:onClick="loadPrivacy"/>
		<Button
			android:id="@+id/button_mobile"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="10dp"
			android:layout_marginLeft="20dp"
			android:layout_marginRight="20dp"
			android:text="@string/about_button_mobile"
			android:gravity="center"
			android:onClick="loadMobile"/>
		<Button
			android:id="@+id/button_developer_info"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="10dp"
			android:layout_marginLeft="20dp"
			android:layout_marginRight="20dp"
			android:text="@string/about_button_developer_info"
			android:gravity="center"
			android:onClick="showDeveloperInfo"/>
		<Button
			android:id="@+id/button_credits"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="10dp"
			android:layout_marginLeft="20dp"
			android:layout_marginRight="20dp"
			android:text="@string/about_button_credits"
			android:gravity="center"
			android:onClick="showCredits"/>
	</LinearLayout>
	<LinearLayout
		android:orientation="vertical"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:gravity="bottom">
		<TextView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="5dp"
			android:text="@string/about_copyright"
			android:gravity="center_horizontal"
			android:textSize="16dp"
			android:id="@+id/CopyrightLabel"/>
	</LinearLayout>
</LinearLayout>